--- a/about/index.html
+++ b/about/index.html
@@ -49,8 +49,8 @@
   
     
   <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="canonical" href="http://localhost:4000/about/">
-  <link rel="alternate" type="application/rss+xml" title="BeeBot.com" href="http://localhost:4000/feed.xml" />
+  <link rel="canonical" href="http://tedbergeron.github.io/about/">
+  <link rel="alternate" type="application/rss+xml" title="BeeBot.com" href="http://tedbergeron.github.io/feed.xml" />
 </head>
 
 
